# bachelor-thesis

./: .gitignore  README.md  bibliography.bib  thesisclass.cls  titlepage.tex
analysis/: .gitignore  CMakeLists.txt  Makefile
analysis/config/: plots.ini
analysis/src/: histogram_plot.cc  histogram_plot.cpp  histogram_plot.h  histogram_plot.hpp  plot_var_histogram.cc  plot_variable.cc  plot_variable.cpp  plothistogram.cc  plothistogramforvar.cc  utils.cc  utils.h
analysis/src/plot/: histogram_plot.cc  histogram_plot.h  histogramplot.cc  histogramplot.h
analysis/src/utils/: string.cc  string.h
assets/appendix/: fi.tex  rfe.tex
assets/chap01/: top_single_tw_1.tex
assets/chap04/: top_s_reco_1.tex
content/: acceptance.tex  acknowledgments.tex  appendix.tex  chap01.tex  chap02.tex  chap03.tex  chap04.tex  conclusion.tex  declaration.tex
software/: Makefile
thesis/: AppendixA.aux  AppendixB.aux  AppendixC.aux  README.md  accept_ger.aux  acceptance.tex  analysis.aux  bib.bib  bibliography.bib  build.sh  concl.aux  custom2.bst  detector.aux  erklaerung.aux  erklaerung.tex  intro.aux  log_1.txt  log_2.txt  log_3.txt  log_4.txt  main.aux  main.bbl  main.tex  originality.tex  references.bib  selection.aux  selection.tex  sim_reco.aux  sim_reco.tex  stat.aux  stat.tex  tagging.aux  theory.aux  theory.tex  thesis.tex  thesisclass.cls  thx.tex  title.tex  title_eng.aux  title_eng.tex  (+3 more)
thesis/bibliography/: bib-settings.bib  thesis.bib
thesis/chapter_2_detector/: detector.tex
thesis/chapter_3_gen/: sim_reco.tex
thesis/chapter_6_selection/: selection.aux  (+1 more)
(+177 files in other folders)
